# trading-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SETUP_MAC.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: AI_LANDMINES.md  DECISIONS.md  FORWARD_TESTING.md
engine/: export.py  settings.py
engine/api/: __main__.py  app.py  serialize.py  settings.py
engine/core/: structural_unit.py  universe.py
engine/data/: client.py  endpoints.py
engine/forward/: __main__.py  bakeoff.py  gauntlet.py  interpret.py  journal.py  live.py  pooled.py  runner.py  stats.py
engine/gaps/: __main__.py  analysis.py  runner.py  statistics.py
engine/intraday/: __main__.py  backtest.py  bars.py  costs.py  features.py  live.py  multiple_testing.py  regime.py  regime_conditioning.py  reversal.py  scanner.py  walkforward.py
engine/ml/: dataset.py  features.py  labels.py  model.py  signals.py  validate.py
engine/portfolio/: dataset.py  features.py  fundamentals.py  scanner.py  window.py
engine/session/: __main__.py  dissect.py  nested.py  pivots.py  report.py  runner.py  session.py
engine/swing/: dataset.py  features.py  scanner.py
frontend/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/e2e/: dashboard.spec.ts
frontend/scripts/: free-ports.mjs  verify-live.mjs
frontend/src/: app.html
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: DissectionView.svelte  JournalView.svelte  SettingsPanel.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
scripts/: dev.sh  verify.sh
tests/: _synth.py  conftest.py  test_api.py  test_bakeoff.py  test_compat.py  test_consistency.py  test_costs.py  test_data_layer.py  test_dissect.py  test_export.py  test_forward.py  test_fundamentals.py  test_gaps.py  test_gauntlet.py  test_interpret.py  test_label_lookahead.py  test_live.py  test_ml_features.py  test_ml_labels.py  test_ml_model.py  test_ml_signals.py  test_ml_validate.py  test_multiple_testing.py  test_pivots.py  test_pooled.py  test_portfolio.py  test_real_data.py  test_regime.py  test_session.py  test_settings.py  test_stats.py  test_swing.py  test_tier_probe.py  test_walkforward.py
